--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bookName">Book Name:</label>
-                    <input type="text" id="bookName" class="form-control" placeholder="e.g., Stranded by Nikki Shannon Smith" required>
+                    <input type="text" id="bookName" class="form-control" placeholder="e.g., Harry Potter and the Sorcerer’s Stone" required>
                 </div>
                 <div class="form-group">
                     <label for="chapters">Chapters:</label>
