--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="form-group">
                     <label for="chapters">Chapters:</label>
-                    <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required value="all">
+                        <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required>
                 </div>
                 <div class="form-group">
                     <label for="ageRange">Age Range:</label>
