--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Book Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="inputSection">
-        <form id="inputForm">
-            <div class="form-group">
-                <label for="useGeneric">
-                    <input type="checkbox" id="useGeneric" name="useGeneric">
-                    Use generic literature questions (ignores book and chapters)
-                </label>
+    <div class="container">
+        <h1>Dynamic Book Quiz Generator</h1>
+        <div id="autosaveStatus">Autosaving...</div>
+        <div id="loadingScreen" style="display: none;">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="form-group">
-                <label for="bookName">Book Name:</label>
-                <input type="text" id="bookName" class="form-control" placeholder="e.g., Stranded by Nikki Shannon Smith" required>
-            </div>
-            <div class="form-group">
-                <label for="chapters">Chapters:</label>
-                <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required>
-            </div>
-            <div class="form-group">
-                <label for="ageRange">Age Range:</label>
-                <select id="ageRange" class="form-control" required>
-                    <option value="" disabled selected>Select an age range</option>
-                    <option value="5-7">5-7</option>
-                    <option value="8-10">8-10</option>
-                    <option value="11-13">11-13</option>
-                    <option value="14+">14+</option>
-                </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Generate Quiz</button>
-            <button type="button" id="resetBtn" class="btn btn-secondary">Reset</button>
-        </form>
+            <p id="loadingMessage" class="mt-3">Processing...</p>
+        </div>
+        <div id="inputSection">
+            <form id="inputForm">
+                <div class="form-group">
+                    <label for="useGeneric">
+                        <input type="checkbox" id="useGeneric" name="useGeneric">
+                        Use generic literature questions (ignores book and chapters)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="bookName">Book Name:</label>
+                    <input type="text" id="bookName" class="form-control" placeholder="e.g., Stranded by Nikki Shannon Smith" required>
+                </div>
+                <div class="form-group">
+                    <label for="chapters">Chapters:</label>
+                    <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required value="all">
+                </div>
+                <div class="form-group">
+                    <label for="ageRange">Age Range:</label>
+                    <select id="ageRange" class="form-control" required>
+                        <option value="" disabled selected>Select an age range</option>
+                        <option value="5-7">5-7</option>
+                        <option value="8-10">8-10</option>
+                        <option value="11-13">11-13</option>
+                        <option value="14+">14+</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Generate Quiz</button>
+                <button type="button" id="resetBtn" class="btn btn-secondary">Reset</button>
+            </form>
+        </div>
+
+        <div id="quizSection" style="display: none;">
+            <form id="quizForm">
+                <div id="mcqContainer"></div>
+                <div id="openContainer"></div>
+                <button type="submit" id="submitBtn" class="btn btn-primary">Submit Quiz</button>
+                <button type="button" id="resetQuizBtn" class="btn btn-secondary">Reset Answers</button>
+                <button type="button" id="backBtn" class="btn btn-secondary">Back to Search</button>
+            </form>
+        </div>
+
+        <div id="results" style="display: none;">
+            <h2 class="animate__animated animate__fadeIn">Your Results</h2>
+            <div id="feedback"></div>
+            <p id="score"></p>
+            <button type="button" id="startNewBtn" class="btn btn-primary">Start New Quiz</button>
+        </div>
     </div>
-
-    <div id="quizSection" style="display: none;">
-        <h2>Quiz</h2>
-        <div id="quizContent"></div>
-        <button type="button" id="submitBtn" class="btn btn-success mt-3">Submit Answers</button>
-        <button type="button" id="resetAnswersBtn" class="btn btn-secondary mt-3">Reset Answers</button>
-        <button type="button" id="backBtn" class="btn btn-info mt-3">Back to Search</button>
-    </div>
-
-    <div id="resultsSection" style="display: none;">
-        <h2>Results</h2>
-        <div id="resultsContent"></div>
-        <button type="button" id="newQuizBtn" class="btn btn-primary mt-3">Start New Quiz</button>
-    </div>
-
-    <div id="status" class="status"></div>
-    <div id="loading" class="loading" style="display: none;">Loading...</div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
