--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
                 </div>
                 <div class="form-group">
                     <label for="bookName">Book Name:</label>
-                    <input type="text" id="bookName" class="form-control" placeholder="e.g., Stranded by Nikki Shannon Smith" required>
+                    <input type="text" id="bookName" class="form-control" placeholder="e.g., Charlotte’s Web" required>
                 </div>
                 <div class="form-group">
                     <label for="chapters">Chapters:</label>
-                    <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required value="all">
+                    <input type="text" id="chapters" class="form-control" placeholder="e.g., 1-3 or all" required>
                 </div>
                 <div class="form-group">
                     <label for="ageRange">Age Range:</label>
